--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -2,7 +2,6 @@ html {
     position: relative;
     min-height: 100%;
     background-color: #ffffff;
-
     background: url(/assets/images/mem-bg-default.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -10,7 +9,15 @@ html {
     background-size: cover;
 
     &.events-bg {
-        background: url(/assets/images/mem-bg-events.jpg) no-repeat center center fixed;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-position-x: left;
+        background-position-y: center;
+        background-image: url(/assets/images/mem-bg-events.jpg);
+
+        @include mq(tablet) {
+            background-position-x: center; // this image has white at the top center so on mobile it looks as though no image has loaded - left aligning on mobile as a temp fix.
+        }
     }
 
 }
