--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -2,7 +2,7 @@ html {
     position: relative;
     min-height: 100%;
     background-color: #ffffff;
-    background: url(/assets/images/mem-bg-default.jpg) no-repeat center center fixed;
+    background: url(/assets/images/mem-bg-default.jpg) repeat-y center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -10,7 +10,7 @@ html {
 
     &.events-bg {
         background-attachment: fixed;
-        background-repeat: no-repeat;
+        background-repeat: repeat-y;
         background-position-x: left;
         background-position-y: center;
         background-image: url(/assets/images/mem-bg-events.jpg);
