--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -320,6 +320,7 @@ div.event {
     .event-item__media {
         a, img {
             vertical-align: text-bottom; // remove descenders
+            display: block;
         }
     }
 
