Few new mixins and vars

--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -213,7 +213,7 @@ $mem-trans-white: rgba(255, 255, 255, .95);
 $mem-trans-red: rgba(180, 24, 0, .95);
 $mem-trans-green: rgba(170, 216, 1, .95);
 $mem-black: #333333;
-$mem-blue: rgba(2, 199, 225, 1);
+$mem-blue: #4bc6df;
 $mem-buttonBlue: #197caa;
 
 $mem-button-confirm: #1a4683;
@@ -224,6 +224,7 @@ $mem-header: rgba(0, 0, 0, .7);
 $white: #ffffff;
 $offWhite: #d6d6d6;
 $black: #000000;
+$offBlack: #666666;
 $black-trans: rgba(0, 0, 0, .5);
 $white-trans: rgba(255, 255, 255, .5);
 
