--- a/frontend/assets/stylesheets/layout/_side-margins.scss
+++ b/frontend/assets/stylesheets/layout/_side-margins.scss
@@ -1,9 +1,8 @@
 //calculates position of where to place side margins
-@mixin side-margins-position($container-width) {
+@mixin side-margins-position() {
     &:before,
     &:after {
-        width: -webkit-calc((100% - #{rem($container-width + $gs-gutter * 2)}) / 2);
-        width: calc((100% - #{rem($container-width + $gs-gutter * 2)}) / 2);
+        @include side-margins-calc('width')
     }
 }
 
@@ -14,7 +13,9 @@
         position: absolute;
         z-index: 1;
         background: rgba(51, 51, 51, .05);
-        top: 0;
+        // magic number: we shift these margins up to skip the header gap
+        //               and the (fixed) height of the nav bar
+        margin-top: -$header-margin*2;
         height: 100%;
         width: 0;
     }
@@ -26,7 +27,7 @@
     }
 
     @include mq(wide) {
-        @include side-margins-position(gs-span(14));
+        @include side-margins-position();
     }
 }
 
