--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -22,7 +22,7 @@
                             @Config.benefits(tier).cta
                         </a>
                     } else {
-                        <span class="action-cta action-cta--full-width-mobile action-cta--cancel">
+                        <span class="action-cta action-cta--full-width-mobile action-cta--cancel action-cta--disabled">
                             Coming soon
                         </span>
                     }
