--- a/frontend/assets/stylesheets/_extends-only.scss
+++ b/frontend/assets/stylesheets/_extends-only.scss
@@ -21,7 +21,7 @@
     overflow: hidden;
     width: 36px;
     height: 36px;
-    border: 1px solid #000000;
+    border: 1px solid $black;
     padding: 0;
     margin: 0;
     @include border-radius(50%);
