--- a/frontend/assets/stylesheets/nav/_control.scss
+++ b/frontend/assets/stylesheets/nav/_control.scss
@@ -45,28 +45,28 @@
 // workaround for text-decoration magic
 // (lots of elements inside <a>, not all of them underlined)
 .control__user-account:hover {
-    color: #ffffff;
+    color: $white;
     .control__info {
-        color: #ffffff;
+        color: $white;
     }
     .icon-sprite-user-black {
         @extend %icon-sprite-user-white;
     }
     .control {
-        border-color: #ffffff;
+        border-color: $white;
     }
 }
 // todo: refactor this plz
 .control__join-us:hover {
-    color: #ffffff;
+    color: $white;
     .control__info {
-        color: #ffffff;
+        color: $white;
     }
     .icon-sprite-g-black {
         @extend %icon-sprite-g-white;
     }
     .control {
-        border-color: #ffffff;
+        border-color: $white;
     }
 }
 
