--- a/frontend/app/views/fragments/nav.scala.html
+++ b/frontend/app/views/fragments/nav.scala.html
@@ -1,29 +1,29 @@
-@(navMode: Option[String])
+@(inlineMode: Boolean = false)
 
-@navItemClass(mode: String) = @{
-    if (mode == "inline") "inline-list__item nav__item" else "nav__item"
+@navItemClass() = @{
+    if (inlineMode) "inline-list__item nav__item" else "nav__item"
 }
 
-@if(navMode.getOrElse("") == "inline") {
-    <li class="@navItemClass(navMode.getOrElse(""))">
+@if(inlineMode) {
+    <li class="@navItemClass()">
         <a href="/" class="nav__link"><i class="icon-sprite icon-sprite-home"></i></a>
     </li>
 }
-<li class="@navItemClass(navMode.getOrElse(""))">
+<li class="@navItemClass()">
     <a href="/events" class="nav__link case--lower">Events</a>
 </li>
-<li class="@navItemClass(navMode.getOrElse(""))">
+<li class="@navItemClass()">
     <a href="/about" class="nav__link case--lower">About membership</a>
 </li>
-<li class="@navItemClass(navMode.getOrElse(""))">
+<li class="@navItemClass()">
     <a href="/join/patron" class="nav__link case--lower">Patrons</a>
 </li>
-<li class="@navItemClass(navMode.getOrElse(""))">
+<li class="@navItemClass()">
     <a href="/join" class="nav__link case--lower">Pricing</a>
 </li>
-<li class="@navItemClass(navMode.getOrElse(""))">
+<li class="@navItemClass()">
     <a href="/help" class="nav__link case--lower">Help</a>
 </li>
-<li class="@navItemClass(navMode.getOrElse(""))">
+<li class="@navItemClass()">
     <a href="/feedback" class="nav__link nav__link--last case--lower">Feedback</a>
 </li>
