--- a/frontend/app/views/fragments/event/item.scala.html
+++ b/frontend/app/views/fragments/event/item.scala.html
@@ -37,7 +37,7 @@
                     @if(isHero){
                         @for(desc <- event.description) {
                             <div class="event-item__description">
-                                @desc.text.take(200)@if(desc.text.length > 200){&hellip;}
+                                @desc.blurb
                             </div>
                         }
                     }
