--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -104,7 +104,7 @@
 
                             @for(desc <- event.description) {
                                 <div class="event-item__description">
-                                    @desc.text.take(200)@if(desc.text.length > 200){&hellip;}
+                                    @desc.blurb
                                 </div>
                             }
 
