updated areas around the site where benefits info was being used, swapped out to use priceInfo fragment

--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -19,7 +19,7 @@
             </ul>
             <div>
                 <span class="package__price">
-                    @Benefits.details(tier).priceText
+                    @fragments.benefits.priceInfo(Benefits.details(tier))
                     @if(tier > Tier.Friend){
                         <span class="package__pcm">pcm</span>
                     }
