--- a/frontend/app/views/joiner/thankyou/paid.scala.html
+++ b/frontend/app/views/joiner/thankyou/paid.scala.html
@@ -9,7 +9,7 @@
 
         @fragments.layout.sectionHeader("Thank You")
 
-        @fragments.tickets.ticketsFunnel(4)
+        @fragments.tickets.ticketsFunnel(4, StepOne = "", StepTwo = "", StepThree = "")
 
     </section>
 
