--- a/frontend/app/views/login/signin.scala.html
+++ b/frontend/app/views/login/signin.scala.html
@@ -8,7 +8,9 @@
 
     <section class="section-signin">
 
-        @fragments.tickets.ticketsFunnel(2, StepThree = "", StepFour = "")
+        @fragments.tickets.ticketsFunnel(2, StepOne = "", StepThree = "", StepFour = "")
+
+        <h1 class="section-sub-headline">Sign into your Guardian account</h1>
 
         <div class="signin__jumbotron">
             <h1 class="signin__tagline">Progress comes through the free expression of ideas</h1>
