--- a/frontend/app/views/fragments/tickets/ticketsFunnel.scala.html
+++ b/frontend/app/views/fragments/tickets/ticketsFunnel.scala.html
@@ -1,26 +1,27 @@
 @(  Step: Int,
-    StepOne: String = "Choose membership",
-    StepTwo: String = "Sign into Guardian account",
-    StepThree: String = "Welcome pack / Billing",
+    StepOne: String = "Join us",
+    StepTwo: String = "Register or sign in",
+    StepThree: String = "Address & Billing",
     StepFour: String = "Confirm membership")
 
 <div class="funnel">
-    <ul class="funnel__rail u-unstyled l-row l-row--items-4">
-        <li class="funnel__step l-row__item @if(Step == 1){active}">
+    <ul class="funnel__rail inline-list">
+        <li class="funnel__step @if(Step == 1){active}">
             <span class="funnel__point"></span>
-            <span class="funnel__text">@StepOne</span>
+            <span class="funnel__text hidden-mobile">@StepOne</span>
         </li>
-        <li class="funnel__step l-row__item @if(Step == 2){active}">
+        <li class="funnel__step @if(Step == 2){active}">
             <span class="funnel__point"></span>
-            <span class="funnel__text">@StepTwo</span>
+            <span class="funnel__text hidden-mobile">@StepTwo</span>
         </li>
-        <li class="funnel__step l-row__item @if(Step == 3){active}">
+        <li class="funnel__step @if(Step == 3){active}">
             <span class="funnel__point"></span>
-            <span class="funnel__text">@StepThree</span>
+            <span class="funnel__text hidden-mobile">@StepThree</span>
         </li>
-        <li class="funnel__step l-row__item @if(Step == 4){active}">
+        <li class="funnel__step @if(Step == 4){active}">
             <span class="funnel__point"></span>
-            <span class="funnel__text">@StepFour</span>
+            <span class="funnel__text hidden-mobile">@StepFour</span>
         </li>
+        <li class="funnel-stretch"></li>
     </ul>
 </div>
