--- a/frontend/app/views/joiner/detail/addressForm.scala.html
+++ b/frontend/app/views/joiner/detail/addressForm.scala.html
@@ -7,7 +7,7 @@
 
     @fragments.layout.sectionHeader(Config.siteTitle + " events in your area")
 
-    @fragments.tickets.ticketsFunnel(3, StepThree= "Enter location details", StepFour = "")
+    @fragments.tickets.ticketsFunnel(3, StepOne = "", StepTwo = "", StepThree= "Location", StepFour = "")
 
     <form action="" method="POST" id="payment-form" class="form form-primary-container js-address-form">
         @CSRF.formField
