--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -9,7 +9,7 @@
 
             @fragments.layout.sectionHeader("Billing")
 
-            @fragments.tickets.ticketsFunnel(3, StepFour = "")
+            @fragments.tickets.ticketsFunnel(3, StepOne = "", StepTwo = "", StepFour = "")
 
             <form action="" method="POST" id="payment-form" class="form form-primary-container js-stripe-form">
 
