--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -6,13 +6,39 @@
 @import views.support.Dates._
 @import helper._
 
+@benefit(tier: com.gu.membership.salesforce.Tier.Tier) = {
+    <div class="tickets-select-form__section">
+        <div class="tickets-select-form__header u-cf">
+            <label class="tickets-select-form__label" for="@tier.toString.toLowerCase">
+                <input class="tickets-select-form__input" type="radio" value="friend" id="@tier.toString.toLowerCase" name="tier"/>
+            </label>
+            <div class="tickets-select-form-header__secondary u-cf">
+                <div class="price-info-container">
+                    <h2 class="tickets-select-form__tier-name">@tier</h2>
+                </div>
+                <div class="price-info-container price-info-container--last">
+                    @fragments.benefits.priceInfo(Benefits.details(tier))
+                </div>
+                <a class="tickets-select-form__toggle mobile-only js-benefit-header" href="#">
+                    <i class="i icon-sprite-arrow-grey-large tickets-select-form__toggle-icon js-toggle-icon"></i>
+                </a>
+            </div>
+        </div>
+        <div class="tickets-select-form__detail hidden-mobile">
+            <p class="tickets-select-form__leadin">@Benefits.details(tier).leadin</p>
+            <ul class="u-unstyled">
+                @for((header, body) <- Benefits.details(tier).list) {
+                <li class="tickets-select-form__header-title">@header</li>
+                <li class="tickets-select-form__header-copy">@body</li>
+                }
+            </ul>
+        </div>
+    </div>
+}
+
 @main("Join membership") {
 
-
-
     <section class="section-two-thirds">
-
-        @fragments.layout.sectionHeader("Choose a membership tier")
 
         @fragments.tickets.ticketsFunnel(1, StepTwo = "", StepThree = "", StepFour = "")
 
@@ -20,56 +46,18 @@
 
         <section class="two-thirds">
 
-            <h2 class="section-sub-headline">Tiers</h2>
+            <h1 class="section-sub-headline">Choose a membership tier</h1>
 
             <form action="" method="POST" id="payment-form" class="form tickets-select-form">
                 @CSRF.formField
-                <a class="mobile-only js-benefit-header" href="#">
-                    <h2 class="u-cf tickets-select-form__tier-name">@Tier.Friend<span class="tickets-select-form__price">@Benefits.details(Tier.Friend).priceText</span></h2>
-                </a>
-                <label class="hidden-mobile tickets-select-form__label" for="friend">
-                    <input class="tickets-select-form__input" type="radio" value="friend" id="friend" name="tier"/>
-                    <h2 class="u-cf hidden-mobile tickets-select-form__tier-name">@Tier.Friend<span class="tickets-select-form__price">@Benefits.details(Tier.Friend).priceText</span></h2>
-                    <p class="tickets-select-form__leadin">@Benefits.details(Tier.Friend).leadin</p>
-                    <ul class="u-unstyled">
-                    @for((header, body) <- Benefits.details(Tier.Friend).list) {
-                        <li class="tickets-select-form__header-title">@header</li>
-                        <li class="tickets-select-form__header-copy">@body</li>
-                    }
-                    </ul>
-                </label>
 
-                <a class="mobile-only js-benefit-header" href="#">
-                    <h2 class="u-cf tickets-select-form__tier-name">@Tier.Partner<span class="tickets-select-form__price">@Benefits.details(Tier.Partner).priceText</span></h2>
-                </a>
-                <label class="hidden-mobile tickets-select-form__label" for="partner">
-                    <input class="tickets-select-form__input" type="radio" value="partner" id="partner" name="tier" checked="checked"/>
-                    <h2 class="u-cf hidden-mobile tickets-select-form__tier-name">@Tier.Partner<span class="tickets-select-form__price">@Benefits.details(Tier.Partner).priceText</span></h2>
-                    <p class="tickets-select-form__leadin">@Benefits.details(Tier.Partner).leadin</p>
-                    <ul class="u-unstyled">
-                    @for((header, body) <- Benefits.details(Tier.Partner).list) {
-                        <li class="tickets-select-form__header-title">@header</li>
-                        <li class="tickets-select-form__header-copy">@body</li>
+                @for(tier <- Tier.values.toSeq.sorted){
+                    @if(tier != Tier.None){
+                        @benefit(tier)
                     }
-                    </ul>
-                </label>
+                }
 
-                <a class="mobile-only js-benefit-header" href="#">
-                    <h2 class="u-cf tickets-select-form__tier-name">@Tier.Patron<span class="tickets-select-form__price">@Benefits.details(Tier.Patron).priceText</span></h2>
-                </a>
-                <label class="hidden-mobile tickets-select-form__label" for="patron">
-                    <input class="tickets-select-form__input" type="radio" value="patron" id="patron" name="tier"/>
-                    <h2 class="u-cf hidden-mobile tickets-select-form__tier-name">@Tier.Patron<span class="tickets-select-form__price">@Benefits.details(Tier.Patron).priceText</span></h2>
-                    <p class="tickets-select-form__leadin">@Benefits.details(Tier.Patron).leadin</p>
-                    <ul class="u-unstyled">
-                    @for((header, body) <- Benefits.details(Tier.Patron).list) {
-                        <li class="tickets-select-form__header-title">@header</li>
-                        <li class="tickets-select-form__header-copy">@body</li>
-                    }
-                    </ul>
-                </label>
-
-                <input type="submit" class="submit-input action action--logged-in" value="Join today"/>
+                <input type="submit" class="action action--logged-in" value="Join today"/>
 
             </form>
         </section>@*
