--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -129,6 +129,7 @@ $c-neutral5: #dfdfdf;
 $c-neutral6: #eaeaea;
 $c-neutral7: #f1f1f1;
 $c-neutral8: #f6f6f6;
+$c-neutral9: #fdfdfd;
 
 $c-live: #e81818;
 $c-media-icon: #fbba0f;
