--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -10,25 +10,27 @@
         }
         <div class="package__inner">
             <h2 class="package__title">@tier</h2>
-                <span class="package__price">
+                <div class="package__price">
                     @fragments.benefits.priceInfo(Benefits.details(tier))
-                </span>
+                </div>
+                <div class="u-cf">
                 @if(!isCurrentPackage) {
                     @if(currentTier == Tier.Friend || tier == Tier.Friend) {
-                        <a href="/tier/change/@tier.toString.toLowerCase" class="action-cta action-cta--full-width-mobile action-cta--confirm">
+                        <a href="/tier/change/@tier.toString.toLowerCase" class="action action-cta--confirm">
                             @Benefits.details(tier).cta
                         </a>
                     } else {
-                        <span class="action-cta action-cta--full-width-mobile action-cta--cancel action-cta--disabled">
+                        <span class="action action-cta--cancel">
                             Coming soon
                         </span>
                     }
                 }
-                <p>@Benefits.details(tier).leadin</p>
+                </div>
+                <p class="package__leadin">@Benefits.details(tier).leadin</p>
                 <ul class="package__list-element">
                     @for((header, body) <- Benefits.details(tier).list) {
-                    <li>@header</li>
-                    <li>@body</li>
+                    <li class="benefits-title">@header</li>
+                    <li class="benefits-copy">@body</li>
                     }
                 </ul>
         </div>
