--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -10,6 +10,7 @@
    Memebership components
    ========================================================================== */
 @import 'components/action';
+@import 'components/benefits';
 /* ==========================================================================
    Memebership pages
    ========================================================================== */
