--- a/frontend/app/views/fragments/form/submit.scala.html
+++ b/frontend/app/views/fragments/form/submit.scala.html
@@ -5,7 +5,7 @@
     <div class="fieldset__heading"></div>
     <div class="fieldset__fields">
         <div class="actions js-waiting-container">
-            <button type="submit" class="submit-input action--logged-in js-submit-input">@ctaText</button>
+            <button type="submit" class="submit-input action action--logged-in js-submit-input">@ctaText</button>
             <div class="i-wait"><img src="@Asset.at("images/wait.gif")" alt=""/></div>
         </div>
     </div>
