--- a/frontend/app/views/joiner/thankyou/friend.scala.html
+++ b/frontend/app/views/joiner/thankyou/friend.scala.html
@@ -5,7 +5,7 @@
     <section class="joiner-section joiner-section--left-aligned joiner-section--no-border">
         @fragments.layout.sectionHeader("Thank You")
 
-        @fragments.tickets.ticketsFunnel(4, StepOne = "", StepTwo = "", StepThree= "Location")
+        @fragments.tickets.ticketsFunnel(4, StepOne = "", StepTwo = "", StepThree= "")
     </section>
 
     <section class="align-center">
