--- a/frontend/assets/stylesheets/pages/_tickets.scss
+++ b/frontend/assets/stylesheets/pages/_tickets.scss
@@ -230,7 +230,7 @@
                 width: 106px,
                 left: 50%,
                 margin-left: -53px,
-                top: -($gs-baseline*2)
+                top: -36px
             ));
         }
 
