--- a/frontend/app/views/info/feedbackThankyou.scala.html
+++ b/frontend/app/views/info/feedbackThankyou.scala.html
@@ -1,7 +1,7 @@
 @()
 
 @main("Feedback") {
-    @fragments.layout.sectionHeader("Feedback thankyou")
+    @fragments.layout.sectionHeader("Thank you for contacting us")
 
-    <p>Thankyou for your feedback</p>
+    <p>We really appreciate your feedback.</p>
 }
