--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -25,10 +25,10 @@
                                         <i class="icon-sprite icon-sprite-user-black"></i>
                                     </span>
                                 </span>
-                                <span class="hidden-mobile no-underline--override">
+                                <span class="hidden-mobile">
                                     <span class="identity__notice control__info">Sign in</span>
-                                    <span class="identity__account control__info u-h"></span>
-                                    <span class="identity__tier control__info u-h"></span>
+                                    <span class="identity__account control__info u-h no-underline--override"></span>
+                                    <span class="identity__tier control__info u-h no-underline--override"></span>
                                 </span>
                             </a>
                         </li>
