fix for side margins breaking

--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -235,3 +235,5 @@ $mem-live-red: transparentize(#b51800, .15);
 $mem-live-accent: #cc2b12;
 
 $mem-live-red-trans: rgba(180, 24, 0, .95);
+
+$side-margins-top-magic-number: 114px;
