removed rollover on event standalone

--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -484,5 +484,12 @@ div.event {
                 padding: $gs-baseline*2 0 0
             ));
         }
+
+        *:hover, &:hover {
+            background-color: $c-neutral7;
+            .event-item__title {
+                text-decoration: none;
+            }
+        }
     }
 }
