--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -9,7 +9,7 @@
 
     Guardian membership is a community of people who share our belief that the open exchange of information,
     ideas and opinions can change the world for the better. By signing up and paying your subscription 
-    (at Partner and Patron level), you are helping us to bring those words to life by supporting our open, independent 
+    (at Partner and Patron level), you are helping us to bring those words to life by supporting our open,independent 
      and liberal journalism. In return, you get access to events and experiences that are only available to our members.
     </li>
 
@@ -95,7 +95,7 @@
 
     <li>I've got a question
 
-    Please email membershipsupport@theguardian.com with your question. We will get back to you within 24 hours.<li>
+    Please email membershipsupport@@theguardian.com with your question. We will get back to you within 24 hours.<li>
 
     <li>How do I know you are protecting my personal information?
 
